feat: Update CSS

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -20,6 +20,10 @@ a {
   cursor: pointer;
 }
 
+#content {
+  width: 100%;
+}
+
 .btn-default {
   width: 240px;
   background-color: var(--primary-color);
