--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -2,7 +2,7 @@ header {
   width: 100%;
   padding: 16px 8%;
   background-color: var(--secondary-color);
-  position: sticky;
+  position: fixed;
   top: 0;
   z-index: 1;
 }
