--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,7 +1,9 @@
 #home {
   width: 100%;
-  min-height: calc(100vh - 62.4px);
+  min-height: 100vh;
   background-color: var(--secondary-color);
+  justify-content: center;
+  align-items: center;
   display: flex;
   gap: 8rem;
 }
@@ -11,7 +13,6 @@
   display: flex;
   flex-direction: column;
   gap: 48px;
-  margin: auto 0;
 }
 
 #cta_text {
