--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 html {
@@ -28,6 +28,7 @@ a {
   width: 240px;
   background-color: var(--primary-color);
   border: none;
+  border-radius: 8px;
   padding: 16px 0;
   display: flex;
   align-items: center;
@@ -42,30 +43,33 @@ a {
 }
 
 .btn-default:hover {
-  background-color: #f9faff;
+  width: 250px;
 }
 
 h2 {
+  width: 400px;
   font-size: var(--h2-font-size);
-  font-weight: var(--semi-bold);
+  font-weight: 500;
   margin-bottom: 32px;
+  color: var(--text-color);
+  align-self: flex-start;
 }
 
 :root {
-  --primary-color: #1fd45d;
-  --secondary-color: #10173a;
-  --light-color: #f9faff;
-  --light-color-opacity: #f9faff05;
+  --primary-color: #301dde;
+  --secondary-color: #f9f9f9;
+  --text-color: #0f0f0f;
+  --primary-color-opacity: #301dde10;
 
   --h1-font-size: 4.8rem;
-  --h2-font-size: 3.4rem;
+  --h2-font-size: 2.4rem;
   --h3-font-size: 2.4rem;
   --h6-font-size: 2rem;
   --a-font-size: 1.6rem;
   --p-font-size: 1.4rem;
 
-  --semi-bold: 600;
-  --medium: 500;
+  --semi-bold: 700;
+  --medium: 600;
   --regular: 300;
 }
 
@@ -90,7 +94,15 @@ h2 {
     --p-font-size: 1.4rem;
   }
 
+  h2 {
+    width: 100%;
+  }
+
   .btn-default {
+    width: 90%;
+  }
+
+  .btn-default:hover {
     width: 100%;
   }
 }
